@@ -1,5 +1,8 @@
 This file documents the revision history for mod_gearman.
 
+next:
+          - add 'log_stats_interval' option
+
 4.0.2 Tue Jun  7 16:42:57 CEST 2022
           - improve/unify worker/client cleanup
           - fix potential crash during shutdown
